# quantumflake

./: README.md  pyproject.toml  requirements.txt
cliff/: README.md  cliff_head.py  dataset.py  main.py  prompt.py  vision_transformer.py
docs/: get_started.md  model_zoo.md
docs/guide/: calibration.md  config.md  patching.md
docs/models/: classifier.md  detr.md  maskterial.md  openvino_yolo.md  vitdet.md  yolo.md
material_data/: MoS2.csv  MoSe2.csv  Si.csv  WS2.csv  WSe2.csv  instances_default.json  mono_layer_dict.py
misc/: convert_tiff_to_png.py  convert_to_onnx.py
phi-adapt/colorpy/: ciexyz.py
phi-adapt/colorpy/colorpy.egg-info/: SOURCES.txt
phi_adapt/: README.md  material_index.py  modules.py
phi_adapt/colorpy/: blackbody.py  ciexyz.py  illuminants.py  plots.py
phi_adapt/colorpy/colorpy.egg-info/: PKG-INFO  top_level.txt
quantumflake/: __init__.py  cli.py  material_index.py  pipeline.py
quantumflake/cfg/: cpu_int8.yaml  default.yaml  gpu.yaml
quantumflake/detector_training_cfg/: default.yaml
quantumflake/models/: classifier.py  detector.py
quantumflake/trainers/: classify.py  detect.py
quantumflake/utils/: data.py  io.py  m2f_bootstrap.py  maskterial_bootstrap.py  vis.py  vitdet_bootstrap.py  yolo2coco.py
qupaint/: README.md
