[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumflake"
version = "0.2.1"
authors = [
  { name="Sankalp Pandey", email="sankalpp@uark.edu" }
]
description = "A framework for 2D material flake detection and classification."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.1",
    "torchvision",
    "ultralytics>=8.2",
    "opencv-python-headless==4.11.0.86",
    "Pillow",
    "pyyaml",
    "tqdm",
    "matplotlib",
    "seaborn",
    "transformers",
    "accelerate",
]

[project.urls]
"Homepage" = "https://github.com/uark-cviu/quantumflake"
"Bug Tracker" = "https://github.com/uark-cviu/quantumflake/issues"

[project.scripts]
quantumflake = "quantumflake.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantumflake*"]
exclude = ["tests*", "data*", "runs*"]
